Changes and Java 1.8 support